--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "nodemon --ext ts --exec ts-node src/index.ts",
+    "dev:3": "nodemon --ext ts --exec ts-node --loader ts-node/esm src/index.ts",
+    "build": "rimraf dist && tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -12,7 +22,7 @@
   "dependencies": {
     "@google-cloud/vision": "^4.3.2",
     "dotenv": "^16.4.7",
-    "fs": "^0.0.1-security",
+    "fs": "0.0.1-security",
     "inversify": "^6.2.2",
     "jimp": "^1.6.0",
     "mongoose": "^8.10.1",
@@ -21,8 +31,20 @@
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
+    "@types/sinon": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "prettier": "^3.5.2",
+    "rimraf": "^6.0.1",
+    "sinon": "^19.0.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
