--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
     "dev": "nodemon --ext ts --exec ts-node src/index.ts",
-    "dev:3": "nodemon --ext ts --exec ts-node --loader ts-node/esm src/index.ts",
-    "build": "rimraf dist && tsc",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -42,7 +40,6 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.2",
-    "rimraf": "^6.0.1",
     "sinon": "^19.0.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
