--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install pnpm
-        run: npm install -g pnpm
+        run: npm install -g pnpm && pnpm --version
 
       - name: Setup corepack
         run: corepack enable && corepack prepare pnpm@latest --activate
