fix pnpm in git actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Checkout code
         uses: actions/checkout@v4
 
