Adapted for use by NPM

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+      # - name: Setup pnpm
+      #   uses: pnpm/action-setup@v4
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,19 +25,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "pnpm"
+          cache: "npm"
+          # cache: "pnpm"
 
-      - name: Install pnpm
-        run: npm install -g pnpm && pnpm --version
+      # - name: Install pnpm
+      #   run: npm install -g pnpm && pnpm --version
 
-      - name: Setup corepack
-        run: corepack enable && corepack prepare pnpm@latest --activate
+      # - name: Setup corepack
+      #   run: corepack enable && corepack prepare pnpm@latest --activate
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm ci
 
       - name: Run tests
-        run: pnpm test -- --coverage
+        run: npm test
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
