--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Run tests
         run: pnpm test
 
+      - name: Run tests with coverage
+        run: pnpm test:coverage
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
