create handlePhoto and OcrService; fixed typescript dependencies;

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --ext ts --exec ts-node src/index.ts",
+    "dev2": "nodemon --ext ts --exec ts-node src/index.ts",
+    "dev": "nodemon --ext ts --exec ts-node -P tsconfig.json src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
