--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "lib": ["ESNext", "DOM"], 
+    "types": ["node"] 
   },
   "include": ["src/**/*.ts"]
 }
