--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "lib": ["ESNext", "DOM"], 
-    "types": ["node"] 
+    "lib": ["ESNext", "DOM"],
+    "types": ["node", "jest"]
   },
   "include": ["src/**/*.ts"]
 }
