--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vertexai": "^1.9.3",
     "@google-cloud/vision": "^4.3.2",
     "dotenv": "^16.4.7",
     "fs": "0.0.1-security",
@@ -26,6 +27,7 @@
     "jimp": "^1.6.0",
     "mongoose": "^8.10.1",
     "node-telegram-bot-api": "^0.66.0",
+    "openai": "^4.86.1",
     "reflect-metadata": "^0.2.2",
     "telegraf": "^4.16.3"
   },
