--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bot-telegram",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "dev2": "nodemon --ext ts --exec ts-node src/index.ts",
     "dev": "nodemon --ext ts --exec ts-node -P tsconfig.json src/index.ts",
@@ -11,9 +11,10 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "prettier": "prettier --write ."
+    "lint": "eslint . --ext .ts --config ./eslint.config.mjs",
+    "lint:fix": "eslint . --ext .ts --fix --config ./eslint.config.mjs",
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -40,12 +41,20 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^15.4.3",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.2",
     "sinon": "^19.0.2",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
